# gstreamer-practice

./: CMakeLists.txt  main.cpp
inc/: vd_vaapi.h
src/: vd_vaapi.cpp
tutorials/: basic-tutorial-2
